@@ -1,5 +1,10 @@
 # vim: set noexpandtab:
 
+2012-10-27 Steve
+	* Fixed usage of GetSignalElecSF
+		* rel argument no longer exists
+	* Changed default lumi in d3pd code
+
 2012-10-24 Steve
 	* Update to SUSYTools-00-01-10
 	* Tagging SusyCommon-00-00-45
